milestone 10 fixed marquee overflow

--- a/m10/styles.css
+++ b/m10/styles.css
@@ -11,6 +11,10 @@
     position: relative;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 @keyframes marq-animation {
     0% {
         left: 0;
